--- a/.config/helix/config.toml
+++ b/.config/helix/config.toml
@@ -6,6 +6,7 @@ completion-replace = true
 trim-trailing-whitespace = true
 end-of-line-diagnostics = "hint"
 color-modes = true
+true-color = true
 
 [editor.inline-diagnostics]
 cursor-line = "warning"
