--- a/.config/helix/config.toml
+++ b/.config/helix/config.toml
@@ -11,9 +11,6 @@ true-color = true
 [editor.inline-diagnostics]
 cursor-line = "warning"
 
-[editor.file-picker]
-hidden = false
-
 [editor.cursor-shape]
 normal = "block"
 insert = "bar"
@@ -21,7 +18,7 @@ select = "underline"
 
 [editor.auto-save]
 after-delay.enable = true
-after-delay.timeout = 300000
+after-delay.timeout = 3000
 
 [editor.indent-guides]
 render = true
@@ -82,16 +79,11 @@ D = ["ensure_selections_forward", "extend_to_line_end", "delete_selection"]
 # enter select mode and mark line
 V = ["select_mode", "extend_to_line_bounds"]
 esc = ["collapse_selection", "keep_primary_selection"]
+ret = "add_newline_above"
+A-ret = "add_newline_above"
 
 [keys.normal.space]
 q = ":quit"
-
-[keys.normal.space.b] # minor mode buffer
-b = "buffer_picker"
-w = ":write"
-c = ":bc"
-x = ":bco"
-l = ":toggle lsp.display-inlay-hints"
 
 [keys.normal."="] # minor mode formatting
 f = ":format"
@@ -103,12 +95,17 @@ R = ":set rulers [0]"
 
 [keys.normal.space.f] # minor mode file
 f = "file_picker"
-p = "file_picker_in_current_buffer_directory"
-P = "file_picker_in_current_directory"
+F = "file_picker_in_current_directory"
+p = "buffer_picker"
+P = "file_picker_in_current_buffer_directory"
+w = ":write"
+c = ":bc"
+x = ":bco"
+l = ":toggle lsp.display-inlay-hints"
 "." = ":toggle file-picker.hidden"
 r = ":reload-all"
 z = ":reset-diff-change"
-w = ":echo %sh{git blame -L %{cursor_line},+1 %{buffer_name}}"
+b = ":echo %sh{git blame -L %{cursor_line},+1 %{buffer_name}}"
 d  = [":vsplit-new", ":lang diff", ":insert-output git diff"]
 
 # ===================
