fix: Configure more terminal programs
More helix commands, lazygit config, and yazi config. Also fiddled with
tmux config though I'm not actively using it.

--- a/.config/helix/config.toml
+++ b/.config/helix/config.toml
@@ -108,13 +108,23 @@ z = ":reset-diff-change"
 b = ":echo %sh{git blame -L %{cursor_line},+1 %{buffer_name}}"
 d  = [":vsplit-new", ":lang diff", ":insert-output git diff"]
 
+[keys.normal.space.w]
+# create key cluster of j,i,k,l
+h = "hsplit"
+j = "jump_view_left"
+i = "jump_view_up"
+k = "jump_view_down"
+J = "swap_view_left"
+I = "swap_view_up"
+K = "swap_view_down"
+
 # ===================
 # === Select Mode ===
 # ===================
 [keys.select]
 0 = "goto_line_start"
 "$" = "goto_line_end"
-G = "goto_file_end"
+G = "extend_to_file_end"
 # create key cluster of j,i,k,l
 j = "extend_char_left"
 i = "extend_visual_line_up"
