--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,4 @@
-set -g mouse on
+set -g mouse off
 
 setw -g mode-style 'fg=black bg=blue bold'
 setw -g clock-mode-colour yellow
@@ -77,8 +77,9 @@ bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
 set -g default-terminal "tmux-256color"
 set -ag terminal-overrides ",$TERM:RGB"
 
-bind-key y display-popup -d '#{pane_current_path}' -x R -h 95% -w 95% -E 'tmux new-session yazi \; set status off'
-bind-key g popup -E -w 95% -h 95%  -d '#{pane_current_path}' lazygit
+bind-key y display-popup -d '#{pane_current_path}' -xC -yx -w 95% -h 95% -E 'tmux new-session yazi \; set status off'
+bind-key g display-popup -d '#{pane_current_path}' -xC -yC -w 95% -h 95% -E lazygit
+bind-key e display-popup -d '#{pane_current_path}' -xC -yC -w 95% -h 95% -E "tmux capture-pane -Jp -S- | hx ~"
 
 set -g allow-passthrough on
 set -ga update-environment TERM
@@ -88,12 +89,9 @@ bind c new-window -c "#{pane_current_path}"
 
 bind-key z popup -E -w 95% -h 90%
 
-
 set -q -g status-utf8 on
 setw -q -g utf8 on
 
 set -s escape-time 50
 
 set -g focus-events on
-
-bind-key e display-popup -w 95% -h 95% -E "tmux capture-pane -Jp -S- | hx ~"
