fix: Remove ... from pull custom command name
It's added by lazygit itself

--- a/.config/lazygit/config.yml
+++ b/.config/lazygit/config.yml
@@ -8,7 +8,7 @@ customCommands:
     context: "localBranches"
     command: "git fetch --all"
   - key: "p"
-    description: "Pull..."
+    description: "Pull"
     commandMenu:
       - key: "r"
         description: "Rebase your local changes on top of the remote branch"
