feat: Add magit-like push commands
Lazygit doesn't support a triangular workflow (upstream separate from
push default) very well. Here I attempt to replicate the Magit push
behaviour the best I can.

I really wanted --force-with-lease to be a flag appended to the command
at will, though I found no way of making that work nicely. I separated
force pushes to a separate binding that's somewhat close to the push
one.

--- a/.config/lazygit/config.yml
+++ b/.config/lazygit/config.yml
@@ -7,18 +7,70 @@ customCommands:
   - key: "f"
     context: "localBranches"
     command: "git fetch --all"
+    loadingText: "Fetching ..."
   - key: "p"
     description: "Pull"
     commandMenu:
       - key: "r"
         description: "Rebase your local changes on top of the remote branch"
         context: "global"
+        loadingText: "Pulling..."
         command: "git pull --rebase"
       - key: "m"
         description: "Merges the remote branch in to your local branch"
         context: "global"
+        loadingText: "Pulling..."
         command: "git pull --no-rebase"
       - key: "f"
         description: "Only pull if the branches do not diverge"
         context: "global"
+        loadingText: "Pulling..."
         command: "git pull --ff-only"
+  - key: "<c-p>"
+    description: "Force push to..."
+    commandMenu:
+      - key: "p"
+        context: "global"
+        description: "Push to remote branch with the same name"
+        loadingText: "Force remote..."
+        command: "git push --force-with-lease {{.SelectedRemote.Name}} refs/heads/{{.SelectedLocalBranch.Name}}:refs/heads/{{.SelectedLocalBranch.Name}}"
+      - key: "u"
+        context: "global"
+        description: "Push to upstream"
+        loadingText: "Force upstream..."
+        command: "git push --force-with-lease {{.SelectedRemote.Name}} refs/heads/{{.SelectedLocalBranch.Name}}:refs/heads/{{.SelectedLocalBranch.UpstreamBranch}}"
+      - key: "e"
+        context: "global"
+        description: "Push elsewhere..."
+        loadingText: "Force elsewhere..."
+        command: "git push --force-with-lease {{.SelectedRemote.Name}} refs/heads/{{.SelectedLocalBranch.Name}}:refs/heads/{{.Form.Branch}}"
+        prompts:
+          - type: "input"
+            key: "Branch"
+            title: "Branch:"
+            suggestions:
+              preset: "remoteBranches"
+  - key: "P"
+    description: "Push to..."
+    commandMenu:
+      - key: "p"
+        context: "global"
+        description: "Push to remote branch with the same name"
+        loadingText: "Pushing remote..."
+        command: "git push {{.SelectedRemote.Name}} refs/heads/{{.SelectedLocalBranch.Name}}:refs/heads/{{.SelectedLocalBranch.Name}}"
+      - key: "u"
+        context: "global"
+        description: "Push to upstream"
+        loadingText: "Pushing upstream..."
+        command: "git push {{.SelectedRemote.Name}} refs/heads/{{.SelectedLocalBranch.Name}}:refs/heads/{{.SelectedLocalBranch.UpstreamBranch}}"
+      - key: "e"
+        context: "global"
+        description: "Push elsewhere..."
+        loadingText: "Pushing elsewhere..."
+        command: "git push {{.SelectedRemote.Name}} refs/heads/{{.SelectedLocalBranch.Name}}:refs/heads/{{.Form.Branch}}"
+        prompts:
+          - type: "input"
+            key: "Branch"
+            title: "Branch:"
+            suggestions:
+              preset: "remoteBranches"
