--- a/.config/lazygit/config.yml
+++ b/.config/lazygit/config.yml
@@ -3,47 +3,60 @@ git:
     - pattern: "^\\w+\\/(\\w+-\\w+).*"
       replace: "$1: "
 # Keybindings
+keybinding:
+  universal:
+    scrollRight: <disabled>
+  branches:
+    forceCheckoutBranch: <disabled> # Free 'F' keybinding
+  commits:
+    openLogMenu: "L"
 customCommands:
   - key: "f"
     context: "localBranches"
     command: "git fetch --all"
     loadingText: "Fetching ..."
-  - key: "p"
+  - key: "F"
     description: "Pull"
     commandMenu:
-      - key: "r"
-        description: "Rebase your local changes on top of the remote branch"
+      - key: "p"
+        description: "Pulls changes from the remote branch"
         context: "global"
         loadingText: "Pulling..."
-        command: "git pull --rebase"
-      - key: "m"
-        description: "Merges the remote branch in to your local branch"
+        command: "git pull --rebase {{.SelectedRemote.Name}} refs/heads/{{.CheckedOutBranch.Name}}"
+      - key: "u"
+        description: "Pulls changes from the branches upstream"
         context: "global"
         loadingText: "Pulling..."
-        command: "git pull --no-rebase"
-      - key: "f"
-        description: "Only pull if the branches do not diverge"
+        command: "git pull --rebase {{.SelectedRemote.Name}} refs/heads/{{.CheckedOutBranch.UpstreamBranch}}"
+      - key: "e"
+        description: "Pull changes from elsewhere..."
         context: "global"
         loadingText: "Pulling..."
-        command: "git pull --ff-only"
-  - key: "<c-p>"
-    description: "Force push to..."
+        command: "git pull --rebase {{.SelectedRemote.Name}} refs/heads{{$length := len .SelectedRemote.Name}}{{slice .Form.Branch $length}}"
+        prompts:
+          - type: "input"
+            key: "Branch"
+            title: "Branch:"
+            suggestions:
+              preset: "remoteBranches"
+  - key: "p"
+    description: "Push to"
     commandMenu:
       - key: "p"
         context: "global"
         description: "Push to remote branch with the same name"
-        loadingText: "Force remote..."
-        command: "git push --force-with-lease {{.SelectedRemote.Name}} refs/heads/{{.SelectedLocalBranch.Name}}:refs/heads/{{.SelectedLocalBranch.Name}}"
+        loadingText: "Pushing remote..."
+        command: "git push {{.SelectedRemote.Name}} refs/heads/{{.CheckedOutBranch.Name}}:refs/heads/{{.CheckedOutBranch.Name}}"
       - key: "u"
         context: "global"
         description: "Push to upstream"
-        loadingText: "Force upstream..."
-        command: "git push --force-with-lease {{.SelectedRemote.Name}} refs/heads/{{.SelectedLocalBranch.Name}}:refs/heads/{{.SelectedLocalBranch.UpstreamBranch}}"
+        loadingText: "Pushing upstream..."
+        command: "git push {{.SelectedRemote.Name}} refs/heads/{{.CheckedOutBranch.Name}}:refs/heads/{{.CheckedOutBranch.UpstreamBranch}}"
       - key: "e"
         context: "global"
         description: "Push elsewhere..."
-        loadingText: "Force elsewhere..."
-        command: "git push --force-with-lease {{.SelectedRemote.Name}} refs/heads/{{.SelectedLocalBranch.Name}}:refs/heads/{{.Form.Branch}}"
+        loadingText: "Pushing elsewhere..."
+        command: "git push {{.SelectedRemote.Name}} refs/heads/{{.CheckedOutBranch.Name}}:refs/heads{{$length := len .SelectedRemote.Name}}{{slice .Form.Branch $length}}"
         prompts:
           - type: "input"
             key: "Branch"
@@ -51,23 +64,23 @@ customCommands:
             suggestions:
               preset: "remoteBranches"
   - key: "P"
-    description: "Push to..."
+    description: "Force push to"
     commandMenu:
       - key: "p"
         context: "global"
         description: "Push to remote branch with the same name"
-        loadingText: "Pushing remote..."
-        command: "git push {{.SelectedRemote.Name}} refs/heads/{{.SelectedLocalBranch.Name}}:refs/heads/{{.SelectedLocalBranch.Name}}"
+        loadingText: "Force remote..."
+        command: "git push --force-with-lease {{.SelectedRemote.Name}} refs/heads/{{.CheckedOutBranch.Name}}:refs/heads/{{.CheckedOutBranch.Name}}"
       - key: "u"
         context: "global"
         description: "Push to upstream"
-        loadingText: "Pushing upstream..."
-        command: "git push {{.SelectedRemote.Name}} refs/heads/{{.SelectedLocalBranch.Name}}:refs/heads/{{.SelectedLocalBranch.UpstreamBranch}}"
+        loadingText: "Force upstream..."
+        command: "git push --force-with-lease {{.SelectedRemote.Name}} refs/heads/{{.CheckedOutBranch.Name}}:refs/heads/{{.CheckedOutBranch.UpstreamBranch}}"
       - key: "e"
         context: "global"
         description: "Push elsewhere..."
-        loadingText: "Pushing elsewhere..."
-        command: "git push {{.SelectedRemote.Name}} refs/heads/{{.SelectedLocalBranch.Name}}:refs/heads/{{.Form.Branch}}"
+        loadingText: "Force elsewhere..."
+        command: "git push --force-with-lease {{.SelectedRemote.Name}} refs/heads/{{.CheckedOutBranch.Name}}:refs/heads{{$length := len .SelectedRemote.Name}}{{slice .Form.Branch $length}}"
         prompts:
           - type: "input"
             key: "Branch"
