fix: open relative path directory by default
Just makes it more convenient to search for files or buffer in Helix's
working directory.

--- a/.config/helix/config.toml
+++ b/.config/helix/config.toml
@@ -94,10 +94,10 @@ r = ":set rulers [120]"
 R = ":set rulers [0]"
 
 [keys.normal.space.f] # minor mode file
-f = "file_picker"
-F = "file_picker_in_current_directory"
-p = "buffer_picker"
-P = "file_picker_in_current_buffer_directory"
+f = "file_picker_in_current_directory"
+F = "file_picker"
+p = "file_picker_in_current_buffer_directory"
+P = "buffer_picker"
 w = ":write"
 c = ":bc"
 x = ":bco"
