fix: Remove rumdl
More annoyance than usefulness.

--- a/.config/helix/languages.toml
+++ b/.config/helix/languages.toml
@@ -14,4 +14,4 @@ args = ["server"]
 
 [[language]]
 name = "markdown"
-language-servers = ["marksman", "harper-ls", "rumdl"]
+language-servers = ["marksman", "harper-ls"]
