fix: Lazygit loading texts

--- a/.config/lazygit/config.yml
+++ b/.config/lazygit/config.yml
@@ -14,24 +14,24 @@ customCommands:
   - key: "f"
     context: "localBranches"
     command: "git fetch --all"
-    loadingText: "Fetching ..."
+    loadingText: "Fetching"
   - key: "F"
     description: "Pull"
     commandMenu:
       - key: "p"
         description: "Pulls changes from the remote branch"
         context: "global"
-        loadingText: "Pulling..."
+        loadingText: "Pulling"
         command: "git pull --rebase {{.SelectedRemote.Name}} refs/heads/{{.CheckedOutBranch.Name}}"
       - key: "u"
         description: "Pulls changes from the branches upstream"
         context: "global"
-        loadingText: "Pulling..."
+        loadingText: "Pulling"
         command: "git pull --rebase {{.SelectedRemote.Name}} refs/heads/{{.CheckedOutBranch.UpstreamBranch}}"
       - key: "e"
         description: "Pull changes from elsewhere..."
         context: "global"
-        loadingText: "Pulling..."
+        loadingText: "Pulling"
         command: "git pull --rebase {{.SelectedRemote.Name}} refs/heads{{$length := len .SelectedRemote.Name}}{{slice .Form.Branch $length}}"
         prompts:
           - type: "input"
@@ -45,17 +45,17 @@ customCommands:
       - key: "p"
         context: "global"
         description: "Push to remote branch with the same name"
-        loadingText: "Pushing remote..."
+        loadingText: "Pushing"
         command: "git push {{.SelectedRemote.Name}} refs/heads/{{.CheckedOutBranch.Name}}:refs/heads/{{.CheckedOutBranch.Name}}"
       - key: "u"
         context: "global"
         description: "Push to upstream"
-        loadingText: "Pushing upstream..."
+        loadingText: "Pushing"
         command: "git push {{.SelectedRemote.Name}} refs/heads/{{.CheckedOutBranch.Name}}:refs/heads/{{.CheckedOutBranch.UpstreamBranch}}"
       - key: "e"
         context: "global"
         description: "Push elsewhere..."
-        loadingText: "Pushing elsewhere..."
+        loadingText: "Pushing"
         command: "git push {{.SelectedRemote.Name}} refs/heads/{{.CheckedOutBranch.Name}}:refs/heads{{$length := len .SelectedRemote.Name}}{{slice .Form.Branch $length}}"
         prompts:
           - type: "input"
@@ -69,17 +69,17 @@ customCommands:
       - key: "p"
         context: "global"
         description: "Push to remote branch with the same name"
-        loadingText: "Force remote..."
+        loadingText: "Force pushing"
         command: "git push --force-with-lease {{.SelectedRemote.Name}} refs/heads/{{.CheckedOutBranch.Name}}:refs/heads/{{.CheckedOutBranch.Name}}"
       - key: "u"
         context: "global"
         description: "Push to upstream"
-        loadingText: "Force upstream..."
+        loadingText: "Force pushing"
         command: "git push --force-with-lease {{.SelectedRemote.Name}} refs/heads/{{.CheckedOutBranch.Name}}:refs/heads/{{.CheckedOutBranch.UpstreamBranch}}"
       - key: "e"
         context: "global"
         description: "Push elsewhere..."
-        loadingText: "Force elsewhere..."
+        loadingText: "Force pushing"
         command: "git push --force-with-lease {{.SelectedRemote.Name}} refs/heads/{{.CheckedOutBranch.Name}}:refs/heads{{$length := len .SelectedRemote.Name}}{{slice .Form.Branch $length}}"
         prompts:
           - type: "input"
