--- a/.config/helix/config.toml
+++ b/.config/helix/config.toml
@@ -70,7 +70,7 @@ D = ["ensure_selections_forward", "extend_to_line_end", "delete_selection"]
 V = ["select_mode", "extend_to_line_bounds"]
 esc = ["collapse_selection", "keep_primary_selection"]
 ret = "add_newline_above"
-"Cmd-ret" = "add_newline_below"
+"S-ret" = "add_newline_below"
 
 [keys.normal.space]
 q = ":quit"
