feat: Replace skim with fzf plugin
The old search worked okay, but my biggest gripes was that:

1. It sometimes inserts extra semicolons which breaks execution
2. History ordering didn't really work

Instead of maintaining (like it was ever maintained) my own
alias/functions for this, I switched to a plugin. More features, less
headaches for me.

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule ".zsh/plugins/zsh-autosuggestions"]
 	path = .zsh/plugins/zsh-autosuggestions
 	url = git@github.com:zsh-users/zsh-autosuggestions.git
+[submodule ".zsh/plugins/fzf-zsh-plugin"]
+	path = .zsh/plugins/fzf-zsh-plugin
+	url = git@github.com:unixorn/fzf-zsh-plugin.git
